fix(desktop): optimize scrollbar corner style in topic tree

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -50,6 +50,9 @@ body.select-none {
     width: 8px;
     height: 8px;
   }
+  &::-webkit-scrollbar-corner {
+    background: transparent;
+  }
 }
 
 h1 {
